Refactor RoomPage: implement popup menu for rankings, invite, delete, and leave options; add localization for sharing prediction room link

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -129,5 +129,9 @@
     "saveText": "Save",
     "@saveText": {
         "description": "Text for the save button"
+    },
+    "joinMyPredictionRoomUsingThisLink": "Join my prediction room using this link:",
+    "@joinMyPredictionRoomUsingThisLink": {
+        "description": "Text for sharing the prediction room link"
     }
 }
