Add leave and delete room functionality: implement LeaveRoomUseCase and DeleteRoomUseCase, update PredictionRepository and RoomBloc, enhance RoomPage with confirmation dialog and localization support.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -133,5 +133,13 @@
     "joinMyPredictionRoomUsingThisLink": "Join my prediction room using this link:",
     "@joinMyPredictionRoomUsingThisLink": {
         "description": "Text for sharing the prediction room link"
+    },
+    "leaveRoom": "Leave Room",
+    "@leaveRoom": {
+        "description": "Text for the leave room button"
+    },
+    "leaveRoomConfirmation": "Are you sure you want to leave the room?",
+    "@leaveRoomConfirmation": {
+        "description": "Confirmation message when leaving a prediction room"
     }
 }
